debian-installer (20040105) UNRELEASED; urgency=low

  * Steve Langasek
    - Use -di flavored kernels for alpha
    - build-depend on aboot for alpha (needed for making
      floppies/CDs bootable)
    - include srm-modules and socket-modules in the alpha initrd
    - tell d-i that alpha CDROMs don't use a floppy image, just an
      initrd and kernel

 -- Joey Hess <joeyh@debian.org>  Fri,  2 Jan 2004 14:48:13 -0500

debian-installer (20040102) unstable; urgency=low

  * Another day, another build. This one has updated busybox in it.

 -- Joey Hess <joeyh@debian.org>  Fri,  2 Jan 2004 14:48:13 -0500

debian-installer (20040101) unstable; urgency=low

  * Giuseppe Sacco
    - Corrected a small error in make/arch/linux-powerpc about
    - the creation of a boot.msg
  * Joey Hess
    - Minor consistency fix in f10.txt.

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jan 2004 13:48:56 -0500

debian-installer (20031230) unstable; urgency=low

  * Giuseppe Sacco
    - Changed the KERNEL_FLAVOUR for powerpc to -di
  * Joey Hess
    - i386 will work on 32 mb now, update system requirements in syslinux help
      screen
    - Remove the encoding grep, all non-utf8 encodings should be fixed now.
    - Fix make dependency loop on hppa and sparc where FLOPPY_SIZE is not set.
      Closes: #225389
    - Add expert and expert-safe boot modes to yaboot.
    - Pass devfs=mount,dall in yaboot.conf for new powerpc kernel.
    - Add build date to yaboot boot.msg.
  * Thiemo Seufer
    - Sanitize mips/mipsel image creation.
  * Vincent Sanders
    - Initial ARM port

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Dec 2003 16:25:49 -0500

debian-installer (20031226) unstable; urgency=low

  * Thiemo Seufer
    - "make reallyclean" should really clean.
    - Fix build failure, images/ wasn't created.
  * Joey Hess
    - Add fakeroot to build-depends, as the debian/rules uses it in the build
      target. Should fix FTBFS on mips.
    - Don't put docs under images/, so debian-cd will find them.
