@@ -7,6 +7,8 @@ debian-installer (20040105) UNRELEASED; urgency=low
     - include srm-modules and socket-modules in the alpha initrd
     - tell d-i that alpha CDROMs don't use a floppy image, just an
       initrd and kernel
+  * Thiemo Seufer
+    - Remove dead apt-get code in the Makefile.
 
  -- Joey Hess <joeyh@debian.org>  Fri,  2 Jan 2004 14:48:13 -0500
 
